test/functions/shadowing/type-method-instance-method-field.good
type-method-instance-method-field.chpl:8: error: parenless proc redeclares the field 'x'
